fix some nits